[project]
name = "convert-images-web"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "pillow>=11.0.0",
    "pillow-avif-plugin>=1.4.6",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "types-python-dateutil>=2.9.0.20241206",
]

[tool.mypy]
python_version = "3.13"